--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,7 +30,6 @@ nav {
   -ms-border-radius: 25px;
   -o-border-radius: 25px;
 
-  
 }
 
 ul {
@@ -78,7 +77,7 @@ li a:hover {
 }
 
 .nav-mobile {
-  display: none; /* Sembunyikan mobile di desktop */
+  display: none;
 }
 
 .subtitle {
@@ -226,6 +225,7 @@ section {
   width: 60px;
 }
 
+/* section portofilo */
 #portofolio > div > h1{
   text-align: center;
   color: rgb(250, 173, 26);
@@ -276,6 +276,8 @@ section {
   color: #553;
 }
 
+/* section why-hire-me */
+
 #why-hire-me > div > h1 {
   text-align: center;
   color: rgb(250, 173, 26);
@@ -310,6 +312,96 @@ section {
   color: #555;
 }
 
+/* testomoni section  */
+
+#testimoni > div > h1 {
+  text-align: center;
+  color: rgb(250, 173, 26);
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+}
+
+.testimoni-wrapper {
+  width: 70%;
+  margin: 40px auto 0;
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+}
+
+.testimoni-item {
+  flex: 1;
+  padding: 25px;
+  border-radius: 10px;
+  background-color: #fafafa;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+}
+
+.testimoni-item p {
+  font-family: "Open Sans", sans-serif;
+  font-size: 12pt;
+  line-height: 1.6;
+  color: #444;
+  margin-bottom: 15px;
+}
+
+.testimoni-item h4 {
+  font-family: "Poppins", sans-serif;
+  font-size: 13pt;
+  margin-bottom: 3px;
+}
+
+.testimoni-item span {
+  font-family: "Open Sans", sans-serif;
+  font-size: 11pt;
+  color: #777;
+}
+
+/* footer */
+#footer {
+  width: 100%;
+  background-color: rgb(52, 76, 54);
+  color: white;
+  padding: 40px 0 20px;
+  font-family: "Open Sans", sans-serif;
+}
+
+.footer-wrapper {
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.footer-brand {
+  max-width: 600px;
+}
+
+.footer-brand h3 {
+  font-family: "Poppins", sans-serif;
+  font-size: 22pt;
+  color: rgb(250, 173, 26);
+  margin-bottom: 12px;
+}
+
+.footer-brand p {
+  font-size: 11.5pt;
+  line-height: 1.6;
+  color: #e0e0e0;
+}
+
+.footer-bottom {
+  margin-top: 30px;
+  text-align: center;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  padding-top: 15px;
+}
+
+.footer-bottom p {
+  font-size: 10.5pt;
+  color: #ddd;
+}
 
 
 /* Reponsive mobile */
@@ -324,7 +416,6 @@ section {
     width: 95%;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 1000;
   }
 
   .mobile-header {
@@ -489,6 +580,10 @@ section {
  font-size: 18pt;
 }
 
+#testimoni > div > h1{
+ font-size: 18pt;
+}
+
 .paragaf {
   width: 90%;
   padding-left: 10px;
@@ -539,5 +634,19 @@ section {
 .why-item p {
   text-align: justify;
 }
+
+.testimoni-wrapper {
+  width: 90%;
+  flex-direction: column;
+}
+
+
+  .footer-brand h3 {
+    font-size: 18pt;
+  }
+
+  .footer-brand p {
+    font-size: 10.5pt;
+  }
 
 }
